<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hfad.triviaapp.MultipleChoiceActivity" >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        tools:context=".MultipleChoiceActivity">

        <TextView
            android:id="@+id/total_elapsed_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/time_view_mc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/score"
                android:layout_alignParentRight="true"
                android:text="Score: "
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/countdown_mc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textSize="20sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/questionLabel1"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:text="@string/question1"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="red"
            android:background="#0091EA"
            android:textColor="#ffff"
            android:padding="8dp"
            android:id="@+id/choice1"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="green"
            android:background="#0091EA"
            android:textColor="#ffff"
            android:padding="8dp"
            android:id="@+id/choice2"
            android:layout_marginTop="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="blue"
            android:background="#0091EA"
            android:textColor="#ffff"
            android:padding="8dp"
            android:id="@+id/choice3"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/choice4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0091EA"
            android:padding="8dp"
            android:text="yellow"
            android:textColor="#ffff"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/questionLabel2"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/question3"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="orange"
            android:background="#0091EA"
            android:textColor="#ffff"
            android:padding="8dp"
            android:id="@+id/choice1b"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="black"
            android:background="#0091EA"
            android:textColor="#ffff"
            android:padding="8dp"
            android:id="@+id/choice2b"
            android:layout_marginTop="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="grey"
            android:background="#0091EA"
            android:textColor="#ffff"
            android:padding="8dp"
            android:id="@+id/choice3b"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0091EA"
            android:padding="8dp"
            android:text="magenta"
            android:textColor="#ffff"
            android:id="@+id/choice4b"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/mcOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/textView"/>

    </LinearLayout>
</ScrollView>